[gd_scene load_steps=18 format=3 uid="uid://yib7ain7e5ai"]

[ext_resource type="Script" path="res://Entities/Wolf/Wolf3D/wolf3D.gd" id="1_lqg7c"]
[ext_resource type="PackedScene" uid="uid://bemusdriw3e4o" path="res://Entities/Wolf/Wolf.tscn" id="1_q6onx"]
[ext_resource type="Script" path="res://Resources/EntityStats/EntityStats.gd" id="2_3vm3p"]
[ext_resource type="Script" path="res://Resources/Lootable/Lootable.gd" id="2_kl5ea"]
[ext_resource type="Script" path="res://Resources/Lootable/Loot.gd" id="3_2trdj"]
[ext_resource type="Resource" uid="uid://bh4qi0qarx8en" path="res://Resources/Item/Lootables/Berries/BlackBerry.tres" id="4_7tlqf"]
[ext_resource type="PackedScene" uid="uid://c8muusfrhdpa6" path="res://Resources/EntityStats/EntityStats.tscn" id="4_dnx8f"]
[ext_resource type="AudioStream" uid="uid://bfxngual0lu07" path="res://Sound/WolfDeath.mp3" id="8_e78yw"]

[sub_resource type="Resource" id="Resource_5b8s2"]
script = ExtResource("3_2trdj")
item = ExtResource("4_7tlqf")
percentage = 1

[sub_resource type="Resource" id="Resource_euv07"]
script = ExtResource("2_kl5ea")
loots = Array[ExtResource("3_2trdj")]([SubResource("Resource_5b8s2")])
minNumberLoot = 1
maxNumberLoot = 2

[sub_resource type="Resource" id="Resource_o48om"]
script = ExtResource("2_3vm3p")
life = 5
maxLife = 5
lootable = SubResource("Resource_euv07")

[sub_resource type="BoxShape3D" id="BoxShape3D_57huf"]
size = Vector3(0.35, 0.5, 0.19)

[sub_resource type="ViewportTexture" id="ViewportTexture_q17x6"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ojro"]
resource_local_to_scene = true
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = SubResource("ViewportTexture_q17x6")
texture_filter = 0
texture_repeat = false

[sub_resource type="QuadMesh" id="QuadMesh_7goh1"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_1ojro")
size = Vector2(0.64, 0.64)

[sub_resource type="BoxShape3D" id="BoxShape3D_bw6e8"]
size = Vector3(2, 1, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_hcp5r"]
size = Vector3(0.36, 0.5, 0.2)

[node name="Wolf" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.13541, 1.07097, 0)
input_ray_pickable = false
floor_block_on_wall = false
script = ExtResource("1_lqg7c")
Stats = SubResource("Resource_o48om")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_57huf")

[node name="Mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_7goh1")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4293918721
size = Vector2i(64, 64)
size_2d_override = Vector2i(64, 64)

[node name="EntityStats" parent="SubViewport" instance=ExtResource("4_dnx8f")]

[node name="Wolf" parent="SubViewport" instance=ExtResource("1_q6onx")]
position = Vector2(2.13541, -1.07097)

[node name="AreaAttack" type="Area3D" parent="."]
input_ray_pickable = false
monitorable = false

[node name="Zone1" type="CollisionShape3D" parent="AreaAttack"]
shape = SubResource("BoxShape3D_bw6e8")

[node name="AreaDMG" type="Area3D" parent="."]
input_ray_pickable = false
monitorable = false

[node name="Zone2" type="CollisionShape3D" parent="AreaDMG"]
shape = SubResource("BoxShape3D_hcp5r")

[node name="Patrol_pos" type="Node3D" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AttackPrep" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenEnabler3D" type="VisibleOnScreenEnabler3D" parent="."]
aabb = AABB(-0.531976, -0.528005, -0.0551476, 1.06395, 1.05601, 0.110295)

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e78yw")

[connection signal="body_entered" from="AreaAttack" to="." method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_area_attack_body_exited"]
[connection signal="body_entered" from="AreaDMG" to="." method="_on_area_dmg_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="AttackPrep" to="." method="_on_attack_prep_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
